feat: paginate battle reports
